# rules-docker-arm64-reproduction

./: WORKSPACE.bazel
server/: BUILD.bazel
